--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+@media (max-width: 768px){
+	.services{
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (min-width: 769px){
+	.services{
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar-track {
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #222; 
+  border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+::-webkit-scrollbar-thumb:hover {
+  background: black; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+	overflow-x: hidden;
+	text-decoration: none;
+}
+
+.container{
+	width: 100vw;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	padding: 70px 10px;
+	background-color: whitesmoke;
+}
+
+.main-title{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.services{
+	width: 100vw;
+	display: grid;
+	padding: 20px 20px;
+	padding-right: 40px;
+	grid-gap: 40px;
+}
+
+.service-body{
+	width: 100%;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	padding: 0 40px;
+	border-radius: 25px;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+	background-color: white;
+	box-shadow: 5px 5px 13px -8px #222;
+	color: black;
+	overflow: hidden;
+}
+
+.service-body:hover{
+	color: tomato;
+	transform: scale(1.03);
+    box-shadow: 7px 7px 20px -8px #222;	
+}
+
+.service-info{
+	font-weight: bold;
+	font-size: 1.2rem;
+	transition: all 0.3s ease;
 }
