--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -27,6 +27,12 @@
 	font-size: 1.3rem;
 }
 
+@media (max-width: 480px){
+   .input{
+   	font-size: 0.8rem;
+   }
+}
+
 .input:focus{
     border-bottom: 3px solid tomato;	
 }
