--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -16,6 +16,7 @@
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 20px;
+	align-items: center;
 }
 
 .input{
@@ -25,11 +26,13 @@
 	transition: all 0.3s ease-in;
 	padding-bottom: 1px;
 	font-size: 1.3rem;
+	width: 40vw;
+	max-width: 1000px;
 }
 
 @media (max-width: 480px){
    .input{
-   	font-size: 0.8rem;
+   	font-size: 1rem;
    }
 }
 
